fixed header, customized scrollbar, added contact section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,8 @@
     .heroButton{
         @apply px-6 py-2 border border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#e28743]/40 hover:text-[#e28743]/40
     }
+
+    .contactInput{
+        @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#e28743]/40 focus:text-[#e28743]/40
+    }
 }
